# pytest-sandbox

./: README.md
pytest-with-custom-markers/: README.md  pyproject.toml  pytest.ini
pytest-with-custom-markers/tests/: conftest.py  test_integration.py  test_two.py
